--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,3 @@
-/** Author: TrungQuanDev | https://youtube.com/@trungquandev */
 body {
   font-family: "Roboto", sans-serif;
   box-sizing: border-box;
@@ -22,6 +21,7 @@ body {
 }
 
 .fixed-box {
+  margin-top: 80px;
   width: 500px;
   height: 800px;
   border: 1px solid #ccc;
